--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,3 +5,10 @@
 *{
   font-family: Outfit;
 }
+/* @theme {
+  course-details-heading-small: ['26px','36px'];
+  course-details-heading-large: ['36px','44px'];
+  home-heading-small: ['28px','34px'];
+  home-heading-large: ['48px','56px'];
+  default: ['15px','21px'];
+} */
