--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss';
 
 *{
   font-family: Outfit;
 }
+
+.course-heading-small {
+  font-size: 26px;
+  line-height: 36px;
+}
+
+.course-heading-large {
+  font-size: 36px;
+  line-height: 46px;
+}
+
+.home-heading-small {
+  font-size: 36px;
+  line-height: 46px;
+}
+
+.home-heading-large {
+  font-size: 46px;
+  line-height: 56px;
+}
+
